--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ header {
     background-image: url(./img/photo-1556906781-9a412961c28c.jpg);
     width: 100%;
     background-size: cover;
+    padding: 0 2rem;
 }
 
 .box_title_slider {
@@ -141,13 +142,92 @@ header {
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     flex-direction: column;
+    gap: 3rem;
 }
 
-.producto {
+/* product card component */
+.product_container
+{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    align-items: center;
+    position: relative;
+}
+
+.product_container:hover .product_favorite
+{
+    visibility: visible;
+    transform: all 2s ease-in-out;
+}
+
+.product_img_container{
+    grid-column: 1 / 5;
+    min-height: 33rem;
+    height: 100%;
+    margin: auto;
+    max-width: 25rem;
+}
+
+.product_img{
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.product_description{
+    grid-column: 1 / 3;
+}
+
+.product_actions{
+    grid-column: 3 / 5;
+}
+
+.button_add_favorite{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    font-size: 1.5rem;
+}
+
+.button_add_favorite:hover{
+    transition: all 0.3s ease-in-out;
+    color: red;
+}
+
+.product_favorite{
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.button_add_cart
+{
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+    display: grid;
+    align-items: center;
+}
+
+.button_add_cart:hover{
+    background-color: gray;
+    transition: all 0.3s ease-in-out;
+}
+
+/* .producto {
     text-align: center;
     display: flex;
     flex-direction: column;
-}
+} */
 
 .nike {
     width: 65%;
@@ -165,7 +245,7 @@ header {
 #contacto {
     background-image: url(./img/Recurso\ 1-100.jpg);
     background-size: cover;
-    padding: 15px;
+    padding: 3rem 0;
 }
 
 .title_contacto {
@@ -193,28 +273,37 @@ header {
 .form_contacto {
     font-family: 'IBM Plex Sans', sans-serif;
     display: grid;
+    /* gap Y axis */
+    grid-gap: 0.5rem;
 }
 
 .input_form {
-    height: 24px;
-    width: 320px;
-    border-radius: 12px;
+    height: 2rem;
+    width: 20rem;
+    border-radius: 3px;
     border: 0;
-    margin: 6px;
+    padding: 0 0.5rem;
 }
 
 .text_area_form {
-    height: 50px;
-    border-radius: 10px;
+    height: 4rem;
+    width: 20rem;
+    border-radius: 3px;
     margin-top: 6px;
     border: 0;
 }
 
+.text_area_form:focus {
+    outline: none;
+    padding: 0.3rem 0.5rem;
+    font-family: 'Poppins', sans-serif;
+}
+
 .input_submit {
-    width: 100px;
-    height: 28px;
-    border-radius: 14px;
+    width: 100%;
+    border-radius: 3px;
     margin-top: 10px;
+    padding: .5rem .3rem;
     border: 0;
     color: white;
     background-color: #E5233A;
@@ -222,8 +311,9 @@ header {
     cursor: pointer;
 }
 
-.input_submit :hover {
-    background-color: #F2F2F2;
+.input_submit:hover{
+    background-color: #880e1c;
+    transition: all 0.3s ease-in-out;
 }
 
 label {
