--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* import font */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /*Selectores universales, suprimen los estilo predeterminados del navegador*/
 * {
     box-sizing: border-box;
@@ -7,7 +10,10 @@
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -283,6 +289,12 @@ header {
     border-radius: 3px;
     border: 0;
     padding: 0 0.5rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+.input_form:focus {
+    outline: none;
+    outline: 2px solid #E5233A;
 }
 
 .text_area_form {
@@ -291,6 +303,9 @@ header {
     border-radius: 3px;
     margin-top: 6px;
     border: 0;
+    font-family: 'Poppins', sans-serif;
+    outline: none;
+    padding: 0.3rem 0.5rem;
 }
 
 .text_area_form:focus {
